dnl

AC_REVISION($Revision$)
AC_INIT(Makefile.am)

GLOBUS_INIT

AM_PROG_LIBTOOL

dnl config header goes here

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)

AM_CONFIG_HEADER(config.h library/globus_common.h:library/globus_common.h.in)

CHECK_REENTRANT_FUNCS

CHECK_NEED_LNSL

CHECK_NEED_LSOCKET

CHECK_NEED_LDL

GPT_SET_LIBS(["$EXTERNAL_LIBS"])

AC_SUBST(GLOBUS_THREADS)

if test "$GLOBUS_THREADS" = "none" ; then
    GLOBUS_CALLBACK_BUILD="nothreads"
else
    GLOBUS_CALLBACK_BUILD="threads"
fi
AC_SUBST(GLOBUS_CALLBACK_BUILD)

OS_SOURCES=""
OS_HEADERS=""

AC_CHECK_FUNCS(getaddrinfo,,[OS_SOURCES="$OS_SOURCES getaddrinfo.c"])
AC_CHECK_FUNCS(freeaddrinfo,,[OS_SOURCES="$OS_SOURCES freeaddrinfo.c"])
AC_CHECK_FUNCS(getnameinfo,,[OS_SOURCES="$OS_SOURCES getnameinfo.c"])
AC_CHECK_FUNCS(inet_addr,,[OS_SOURCES="$OS_SOURCES inet_addr.c"])
AC_CHECK_FUNCS(inet_pton,,[OS_SOURCES="$OS_SOURCES inet_pton.c"])
AC_CHECK_FUNCS(opendir,,[OS_SOURCES="$OS_SOURCES opendir.c"])
AC_CHECK_FUNCS(closedir,,[OS_SOURCES="$OS_SOURCES closedir.c"])
AC_CHECK_FUNCS(readdir,,[OS_SOURCES="$OS_SOURCES readdir.c"])
AC_CHECK_FUNCS(rewinddir,,[OS_SOURCES="$OS_SOURCES rewinddir.c"])
AC_CHECK_FUNCS(gai_strerror,,[OS_SOURCES="$OS_SOURCES gai_strerror.c"])

case "$host" in
    arm* )
        OS_HEADERS="$OS_HEADERS globus_netos_libc.h"
        ;;
esac

OS_OBJS="`echo \"$OS_SOURCES\" | sed -e \"s/\\\.c/\\\.lo/g\"`"

AC_SUBST(OS_HEADERS)
AC_SUBST(OS_SOURCES)
AC_SUBST(OS_OBJS)


LAC_DOXYGEN("../library")

GLOBUS_FINALIZE

AC_OUTPUT(
	Makefile
	pkgdata/Makefile
	pkgdata/pkg_data_src.gpt
	library/Makefile
	programs/Makefile
	programs/globus-sh-exec
	programs/globus-version
	scripts/Makefile
	config/Makefile
	doxygen/Makefile
	doxygen/Doxyfile 
	doxygen/Doxyfile-internal
	version.h
)
