dnl

AC_REVISION($Revision$)
AC_INIT(Makefile.am)

GLOBUS_INIT

AM_PROG_LIBTOOL

dnl config header goes here

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)

LAC_DOXYGEN([" ../ "])

if test ! "X$GLOBUS_THREADS" = "Xnone"; then
    THREAD_TEST="globus-common-thread-test.pl"
else
    THREAD_TEST=""
fi

case "$GLOBUS_HOST" in
    alpha-cray-unicosmk* )
	MEM_TEST=""
	;;
    * )
	MEM_TEST="globus-common-mem-test.pl"
	;;
esac

AC_SUBST(MEM_TEST)
AC_SUBST(THREAD_TEST)


GLOBUS_FINALIZE

AC_OUTPUT(
	pkgdata/Makefile
	pkgdata/pkg_data_src.gpt
        run-common-tests.pl
	Makefile
	doxygen/Makefile
	doxygen/Doxyfile
	doxygen/Doxyfile-internal
	,
	$GPT_LOCATION/sbin/gpt_generate_bin_pkg_data \
	--flavor=$GLOBUS_FLAVOR_NAME "./pkgdata/pkg_data_src.gpt"
	,
	GLOBUS_FLAVOR_NAME=$GLOBUS_FLAVOR_NAME
	GLOBUS_LOCATION=$GLOBUS_LOCATION
	GPT_LOCATION=$GPT_LOCATION
)
