include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top

setup_SCRIPTS = \
	findshelltools \
	setup_globus_core \
	setup_globus_core.pl

setup_DATA = \
	globus-script-initializer.in \
	globus-sh-tools.sh.in

SUBDIRS = pkgdata

EXTRA_DIST = findshelltools \
	setup_globus_core \
	setup_globus_core.pl \
	globus-script-initializer.in \
	globus-sh-tools.sh.in

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top



