include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top

setup_SCRIPTS = \
	findshelltools \
	setup-globus-core \
	setup-globus-core.pl

setup_DATA = \
	globus-script-initializer \
	Paths.pm \
	globus-sh-tools.sh.in

SUBDIRS = pkgdata

EXTRA_DIST = findshelltools \
	setup-globus-core \
	setup-globus-core.pl \
	globus-script-initializer \
	globus-sh-tools.sh.in \
	Paths.in

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top



