include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top

setup_SCRIPTS = \
	findshelltools \
	setup-globus-core \
	setup-globus-core.pl

setup_DATA = \
	globus-script-initializer \
	globus-sh-tools-vars.sh.in \
	globus-makefile-header.in

SUBDIRS = pkgdata

EXTRA_DIST = findshelltools \
	findshelltools.in \
	setup-globus-core \
	setup-globus-core.pl \
	globus-script-initializer \
	globus-sh-tools-vars.sh.in \
	globus-makefile-header.in

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top



