
AC_REVISION($Revision$)
AC_INIT(Makefile.am)

GLOBUS_INIT

AM_PROG_LIBTOOL

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)

AC_ARG_WITH(tmpdir,
        [  --with-tmpdir=DIR             temporary files in DIR [/tmp]],
        [tmpdir="$withval"],
        [tmpdir='/tmp'])
AC_SUBST(tmpdir)


AC_ARG_WITH(local_tmpdir,
        [  --with-local-tmpdir=LDIR      local temporary files in LDIR [/tmp]],
        [local_tmpdir="$withval"],
        [local_tmpdir='/tmp'])
AC_SUBST(local_tmpdir)

dnl The following directory is used to specify a local temporary file
dnl system.  It's prefered to be a local file system for security needs.

AC_ARG_WITH(secure_tmpdir,
        [  --with-secure-tmpdir=SECDIR   local temporary files in SECDIR [LDIR]],
        [secure_tmpdir="$withval"],
        [secure_tmpdir='${local_tmpdir}'])
AC_SUBST(secure_tmpdir)


AC_OUTPUT(
        Makefile
	globus-script-initializer
	Paths.pm:Paths.in
        pkgdata/Makefile
        pkgdata/pkg_data_src.gpt
)






