AC_REVISION($Revision$)
AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR(config)

GPT_INIT
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION,0)
AM_CONFIG_HEADER(globus_config.h)

AC_ARG_WITH(
    flavor,
    [  --with-flavor                 Globus flavor string],
    [globus_cv_flavor="$withval"],
    [globus_cv_flavor="notset"])

if test "$globus_cv_flavor" = "notset" \
     -o "$globus_cv_flavor" = "no" \
     -o "$globus_cv_flavor" = "yes" ; then
    AC_MSG_ERROR([A flavor description string must be specified!])
fi

GLOBUS_FLAVOR_NAME=$globus_cv_flavor
AC_SUBST(GLOBUS_FLAVOR_NAME)

dnl define FILELIST_FILE variable
FILELIST_FILE=`pwd`;
FILELIST_FILE="$FILELIST_FILE/pkgdata/master.filelist"
AC_SUBST(FILELIST_FILE)



LAC_COMPILERS

LAC_TARGET_ARCH

save_LD=$LD
LD=
AM_PROG_LIBTOOL
mv ./libtool libtool-$GLOBUS_FLAVOR_NAME
LD=$save_LD

dnl
dnl Output selected thread package
dnl
GLOBUS_THREADS=$lac_cv_threads_type
if test "$GLOBUS_THREADS" = "no" ; then
    GLOBUS_THREADS=none
fi
AC_SUBST(GLOBUS_THREADS)

# checking for the GLOBUS_INSTALL_PATH

if test "x$GLOBUS_INSTALL_PATH" = "x"; then
    echo "ERROR Please specify GLOBUS_INSTALL_PATH" >&2
    exit 1
fi

prefix='$(GLOBUS_INSTALL_PATH)'
exec_prefix='$(GLOBUS_INSTALL_PATH)'

dnl check for perl

AC_PATH_PROGS(PERL, perl)
LAC_COMMANDS

dnl Automake is using these for executables somehow
AC_OBJEXT
AC_EXEEXT

AC_OUTPUT(Makefile
       	scripts/globus-build-env-$GLOBUS_FLAVOR_NAME.sh:scripts/globus-build-env.sh.in
	scripts/globus-sh-tools.sh
	scripts/Makefile
	scripts/globus_build_config.pl
	aclocal/Makefile
	config/Makefile
	tests/Makefile
	pkgdata/Makefile
	pkgdata/pkg_data_src.gpt
	,
	$GLOBUS_INSTALL_PATH/sbin/gpt_generate_bin_pkg_data  \
	--flavor=$GLOBUS_FLAVOR_NAME "./pkgdata/pkg_data_src.gpt"
	,
	GLOBUS_FLAVOR_NAME=$GLOBUS_FLAVOR_NAME

	)
