include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top

SUBDIRS = pkgdata

setup_SCRIPTS = \
    setup-globus-gatekeeper \
    setup-globus-gatekeeper.pl


EXTRA_DIST = \
    setup-globus-gatekeeper \
    setup-globus-gatekeeper.pl

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top
